--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,64 +1,61 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link type="text/css" rel="stylesheet" href="/static/styles.css" />
-    <title>wiki: signup</title>
-  </head>
+{% block nav %}
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="{{ login_url }}">login</a>
+                    </li>
+                </ul>
+{% endblock %}
 
-  <body>
-    <nav>
-      <a href="{{ login_url }}">login</a>
-    </nav>
+{% block content %}
+        <div class="row">
 
-    <div id="page">
-      <!--the signup form -->
-      <div class="login-area">
-        <h1 id="sign">Signup</h1>
+            <!-- Wiki Entries Column -->
+            <div class="col-md-8">
 
-        <form method="post">
-          <table>
-            <tr>
-              <td><label>Username</label></td>
-              <td>
-                <input type="text" name="username"
-                  value="{{ username }}">
-                <p class="error">{{ err_name }}</p>
-              </td>
-            </tr>
+                <h1 class="page-header">Signup</h1>
 
-            <tr>
-              <td><label>Password</label></td>
-              <td>
-                <input type="password" name="password"
-                  value="{{ password }}">
-                <p class="error">{{ err_password }}</p>
-              </td>
-            </tr>
+                <form method="post">
+                      <table>
+                            <tr>
+                                <td><label>Username&nbsp;&nbsp;</label></td>
+                                <td>
+                                    <input class="form-control" type="text" name="username" value="{{ username }}">
+                                    <p class="has-warning">{{ err_name }}</p>
+                                </td>
+                            </tr>
 
-            <tr>
-              <td><label>Verify Password</label></td>
-              <td>
-                <input type="password" name="verify"
-                  value="{{ verify }}">
-                <p class="error">{{ err_verify }}</p>
-              </td>
-            </tr>
+                            <tr>
+                                <td><label>Password&nbsp;&nbsp;</label></td>
+                                <td>
+                                    <input class="form-control" type="password" name="password" value="{{ password }}">
+                                    <p class="has-warning">{{ err_password }}</p>
+                                </td>
+                            </tr>
 
-            <tr>
-              <td><label>Email (optional)</label></td>
-              <td>
-                <input type="text" name="email" value="{{ email }}">
-                <p class="error">{{ err_email }}</p>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="2"><input type="submit" value="submit"></td>
-            </tr>
-          </table>
-        </form>
-      </div><!-- the form ends -->
-    </div><!-- page ends -->
-  </body>
-</html>
+                            <tr>
+                                <td><label>Verify Password&nbsp;&nbsp;</label></td>
+                                <td>
+                                    <input class="form-control" type="password" name="verify" value="{{ verify }}">
+                                    <p class="has-warning">{{ err_verify }}</p>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td><label>Email (optional)&nbsp;&nbsp;</label></td>
+                                <td>
+                                    <input class="form-control" type="text" name="email" value="{{ email }}">
+                                    <p class="has-warning">{{ err_email }}</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2"><input class="btn btn-default" type="submit" value="submit"></td>
+                            </tr>
+                      </table>
+                </form>
+
+            </div>
+        </div>
+        <!-- /.row -->
+{% endblock %}
