--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="/static/css/styles.css" rel="stylesheet">
+    <link href="/static/css/octicons.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,7 +60,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>use git hub icon and link</p>
+                    <a href="https://github.com/lautomator/my_wiki" target="_blank"><span class="octicon octicon-mark-github"></span> My Wiki &bull;</a>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
