--- a/templates/edit.html
+++ b/templates/edit.html
@@ -25,7 +25,7 @@
                     <form method="post">
 
                       <div class="entry">
-                        <p><textarea rows="10" class="form-control" name="content">{{ content }}</textarea></p>
+                        <p><textarea rows="10" class="form-control" name="content" placeholder="Enter HTML here...">{{ content }}</textarea></p>
                       </div>
 
                       <input type="submit" class="btn btn-default" value="save">
