--- a/static/css/octicons.css
+++ b/static/css/octicons.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'octicons';
   src: url('/static/fonts/octicons.eot?#iefix') format('embedded-opentype'),
-       url('/static/static/fonts/octicons.woff') format('woff'),
-       url('/static/static/fonts/octicons.ttf') format('truetype'),
-       url('/static/static/fonts/octicons.svg#octicons') format('svg');
+     url('/static/fonts/octicons.woff') format('woff'),
+     url('/static/fonts/octicons.ttf') format('truetype'),
+     url('/static/fonts/octicons.svg#octicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
